[fix] Table cells being cut off on small screens

--- a/src/components/table/table.ios.styl
+++ b/src/components/table/table.ios.styl
@@ -160,8 +160,8 @@ table-dense()
       padding 4px 8px
     thead tr
       height 40px
-    tbody td
-      height 28px
+    //tbody td
+      //height 28px
 
   .q-table-bottom-item
     margin-right 8px
